--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -57,10 +57,11 @@
         app:boxCornerRadiusTopStart="5dp"
         app:boxStrokeColor="@color/box_background_color"
         app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
+        app:boxStrokeWidthFocused="1dp"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
-        android:id="@+id/emailId">
+        android:id="@+id/emailId"
+        app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -70,6 +71,7 @@
             android:textColor="@color/black"
             android:textColorHint="@color/hint_color"
             android:textSize="12sp"
+            android:inputType="textEmailAddress"
             app:boxStrokeColor="@color/box_background_color"
             android:singleLine="true"/>
     </com.google.android.material.textfield.TextInputLayout>
