--- a/app/src/main/res/layout/fragment_third_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_third_on_boarding.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/first_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.OnBoarding.FirstOnBoarding">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".UI.OnBoarding.ThirdOnBoarding">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -15,52 +14,67 @@
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <ImageView
+                android:id="@+id/back_arrow2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/back_arrow"/>
+
+
+            <TextView
+                android:id="@+id/skip3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SKIP"
+                android:textColor="@color/skipcolor"
+                android:textSize="14sp"
+                android:layout_alignParentRight="true"/>
+
+
+        </RelativeLayout>
+
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/onboarding3"/>
 
         <TextView
-            android:id="@+id/skip1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:text="SKIP"
-            android:textColor="@color/skipcolor"
-            android:textSize="14sp" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="69dp"
+            android:layout_marginTop="450dp"
+            android:layout_marginEnd="71dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/we_ll_consolidate_ship_it_to_you"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textFontWeight="700"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/onboarding1" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="49dp"
-                android:layout_marginTop="410dp"
-                android:layout_marginEnd="50dp"
-                android:textStyle="bold"
-                android:layout_marginBottom="170dp"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="@string/get_a_unique_indian_virtual_address_to_shop"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textFontWeight="700"
-                android:textSize="24sp" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/next_btn_1"
+                android:id="@+id/next_btn_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="63dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginBottom="47dp"
                 android:backgroundTint="@color/button_color"
