--- a/app/src/main/res/layout/activity_sign_up_valid.xml
+++ b/app/src/main/res/layout/activity_sign_up_valid.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#E5E5E5"
     android:orientation="vertical"
-    tools:context=".SignUp_Valid">
+    tools:context=".UI.SignupLogin.SignUp_Valid">
 
     <ScrollView
         android:layout_width="match_parent"
