--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical"
-    tools:context=".UI.LoginActivity">
+    tools:context=".UI.SignupLogin.LoginActivity">
 
     <ScrollView
         android:layout_width="match_parent"
