--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical"
-    tools:context=".UI.SignUpActivity">
+    tools:context=".UI.SignupLogin.SignUpActivity">
 
     <ScrollView
         android:layout_width="match_parent"
