--- a/app/src/main/res/layout/fragment_secound_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_secound_on_boarding.xml
@@ -43,9 +43,11 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/onboarding2" />
+                android:layout_width="318dp"
+                android:layout_height="318dp"
+                android:layout_marginTop="52dp"
+                android:layout_marginHorizontal="31dp"
+                android:src="@mipmap/img" />
 
             <TextView
                 android:layout_width="match_parent"
