--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -13,17 +13,18 @@
         android:layout_height="50dp"
         android:src="@mipmap/shoppre_logo"
         android:layout_marginTop="77dp"
-        android:layout_marginHorizontal="125dp"/>
+        android:layout_gravity="center_horizontal"/>
     <ImageView
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginTop="2dp"
         android:layout_marginHorizontal="82dp"
+        android:layout_marginBottom="22dp"
         android:src="@drawable/ic_forgot_password1"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
+
         android:layout_gravity="center_horizontal"
         android:text="Forgot Password?"
         android:textFontWeight="600"
