--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -193,7 +193,9 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/login_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="38dp"
+                android:insetBottom="0dp"
+                android:insetTop="0dp"
                 android:layout_marginHorizontal="82dp"
                 android:layout_marginTop="32dp"
                 android:backgroundTint="#2D8DFF"
@@ -201,6 +203,7 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="11dp"
                 android:text="Login"
+                android:textSize="12sp"
                 android:textAllCaps="false"
                 android:textFontWeight="700"
                 android:textStyle="bold"
