--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -4,62 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.OrderActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".UI.Orders.OrderActivity">
 
+    <include
+        android:id="@+id/OrderToolbar"
+        layout="@layout/toolbar" />
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/orderToolbar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#1B274E">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_width="116dp"
-            android:layout_height="35dp"
-            android:src="@drawable/shopprelogo"/>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            app:menu="@menu/bottom_navigation" />
+    </RelativeLayout>
 
-    </com.google.android.material.appbar.MaterialToolbar>
-
-    <ImageView
-        android:id="@+id/userImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:src="@drawable/shopprelogo"/>
-
-
-
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Name"
-        android:textSize="20sp"/>
-
-
-    <TextView
-        android:id="@+id/userEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Email"
-        android:textSize="20sp"/>
-
-    <TextView
-        android:id="@+id/userId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="id"
-        android:textSize="20sp"/>
-
-
-
-<Button
-    android:id="@+id/logoutBtn"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Logout"
-    android:layout_gravity="center"
-    android:gravity="bottom"/>
 
 </LinearLayout>
