--- a/app/src/main/res/layout/activity_account_wallet.xml
+++ b/app/src/main/res/layout/activity_account_wallet.xml
@@ -5,29 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.AccountAndWallet.AccountWalletActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#E5E5E5">
 
 
     <include
         android:id="@+id/OrderToolbar"
         layout="@layout/toolbar" />
 
+    <FrameLayout
+        android:id="@+id/accountWalletContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_alignParentBottom="true"
             android:paddingVertical="9dp"
             app:menu="@menu/bottom_navigation"
             app:labelVisibilityMode="labeled"
             />
-
     </RelativeLayout>
 
 
